fix polaris connection error