@@ -1,6 +1,6 @@
 -server
 -Xmx2G
--XX:-UseBiasedLocking
+
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
